<resources>
    <string name="action_settings">Settings</string>

    <string name="app_name">HealCity</string>
    <string name="title_activity_heal_city_login">Heal City</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="fruit">"How much fruit did you eat?"</string>
    <string name="vegetables">"How many vegetables did you eat?"</string>
    <string name="enterFruits">"Enter number of fruit"</string>
    <string name="enterVeg">"Enter number of vegetables"</string>
    <string name="submit">"Submit"</string>

    <string name="volunteer">"How many hours did you \n volunteer?"</string>
    <string name="enterVolunteer">Enter number of hours</string>

    <string name="public_transport">"Which public transportation did you take?"</string>
    <string name="bus">"Bus"</string>
    <string name="carpool">"Carpool"</string>
    <string name ="train">"Train"</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_1">Home</string>
    <string name="tab_2">Friends</string>
    <string name="tab_3">Goals</string>
    <string name="tab_4">Nearby</string>
    <string name="tab_5">Shop</string>
</resources>
