<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="71dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="77dp"
        android:text="@string/public_transport"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="67dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/submit_transportation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bus" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/carpool" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/train" />
    </RadioGroup>

    <Button
        android:id="@+id/submit_transportation"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="73dp"
        android:layout_height="31dp"
        android:layout_marginBottom="105dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup5" />
</android.support.constraint.ConstraintLayout>